src/scss/sections/_section-solution.scss
@use "../abstracts/all-abstracts" as *;

#the-solution {
	background: $lightest-grey;
}

.final-prototype-headline {
	margin: auto;
	margin-bottom: 1.5rem;
}

.the-solution-prototype_wrapper {
	display: flex;
	flex-direction: column;
	max-width: 1600px;
	width: 90%;
	margin: 0 auto;
	border-radius: 1rem;
	background-color: white;
	height: fit-content;
	justify-content: center;
}

.the-solution-prototype {
	&_grid-container {
		display: grid;
		grid-template-columns: 1fr;
		grid-template-rows: auto auto;
		margin: 0 auto;
		gap: 2rem;
		align-items: center;
		width: 90%;
		max-width: 28rem;
		grid-template-areas: 'c' 'a';
		justify-content: center;
		padding: 2.5rem 1.5rem;
		border-radius: 1rem;
		background-color: #fff;

		&.intro-prototype {
			grid-template-rows: repeat(2, auto);
			grid-template-areas: 'b' 'a';
		}

		@include breakpoint(med) {
			max-width: 90vw;
			align-items: start;
			grid-template-columns: repeat(2, 1fr);
			grid-template-rows: auto auto auto;
			margin: auto;
			align-items: center;
			width: fit-content;
			background-color: white;
			padding: 3rem 4rem;
			grid-template-areas: 'd d' 'b c'
				'a a';


			&.intro-prototype {
				grid-template-columns: 1fr auto;
				grid-template-rows: auto;
				grid-template-areas: 'a  b';
			}

			&.grid-container-reverse {
				grid-template-columns: 1fr auto;
			}
		}

		@include breakpoint(lg) {
			grid-template-columns: 1fr auto auto;
			grid-template-rows: auto auto;
			grid-template-areas: 'd d d' 'a b c';
		}

		//
		// 		@include breakpoint(med) {
		// 			align-items: start;
		// 			grid-template-columns: 1fr auto auto;
		// 			grid-template-rows: auto;
		// 			grid-template-areas: 'a b c';
		// 			margin: auto;
		// 			align-items: center;
		// 			width: fit-content;
		// 			column-gap: 2rem;
		// 			background-color: white;
		// 			padding: 3rem 4rem;
		//
		// 			&.the-final-prototype {
		// 				padding: 3rem 6rem;
		// 			}
		// 		}
	}

	&_video {
		margin: 0 auto;
		width: 70%;
		max-width: 18rem;

		@include breakpoint(med) {
			width: 100%;
			margin-bottom: 1.5rem;
		}

		&-previous,
		&-iteration {
			display: flex;
			flex-direction: column;
			align-items: center;

			p {
				margin-bottom: 0;
			}
		}

		&-previous {
			grid-area: b;
			display: none;

			p {
				color: $medium-grey
			}

			@include breakpoint(med) {
				display: flex;
			}
		}

		&-iteration {
			grid-area: c;

			p {
				color: $black;
			}
		}
	}

	&_content {
		grid-area: a;
		margin: auto;

		p {
			margin-bottom: 0;
			text-align: center;

			@include breakpoint(lg) {
				text-align: left;
				max-width: 24rem;
			}
		}

		h3 {
			color: $black;
		}

		:last-child {
			margin-bottom: 0;
		}

		@include breakpoint(med) {
			width: 100%;
			min-width: 26rem;
			max-width: 29.5rem;
		}
	}

	&_headline {
		grid-area: d;
		display: none;
		text-align: center;
		margin-bottom: 1rem;

		@include breakpoint(med) {
			display: block;
			font-size: 1.75rem;
		}

		@include breakpoint(lg) {
			text-align: left;
			font-size: 2rem;
			max-width: 24rem;
		}
	}

	.card_headline {
		color: $emphasis-blue;
		font-weight: 500;
		margin-bottom: 0;
		font-size: 1.25rem;
	}

	&_subheading {
		font-size: 1.35rem;
		margin-bottom: 1.25rem;
		color: $off-black !important;
		line-height: 125%;
	}

	&_card {
		display: flex;
		flex-direction: column;
		align-items: flex-start;
		gap: 0.5rem;
		margin: auto;
		margin-top: 2rem;
		padding: 1.5rem 2.5rem;
		padding-right: 1rem;
		border-radius: 0.25rem;
		border-left: 0.5rem solid $emphasis-blue;
		background-color: $lightest-grey;
		width: fit-content;
		height: fit-content;

		@include breakpoint(med) {
			margin-top: 0;
		}

		@include breakpoint(lg) {
			max-width: 32rem;
		}

		.card_list {
			align-self: start;
		}
	}

	&_list {
		margin: auto;
		margin-top: 0;

		li {
			font-size: 1.125rem;
			color: $medium-grey;

			@include breakpoint(med) {
				color: $black;
			}

			@include breakpoint(lg) {
				font-size: 1.25rem;
			}
		}

	}
}

@include breakpoint(med) {
	.the-solution-prototype_wrapper {
		max-width: 68rem;
	}

	.the-solution-prototype_subheading {
		font-size: 1.2rem;
		color: $off-black !important;
		font-weight: 500 !important;
	}

	.the-solution-prototype_body {
		color: $medium-grey !important;
		font-size: 1.25rem;
	}
}

